{const
[STDERR] [eval]:1
const mysql=require('mysql2/promise');(async()= db=await mysql.createPool({host:'localhost',user:'root',password:'123456',database:'medboard'});const [r]=await db.execute('SELECT a.id,a.status FROM admissions a WHERE a.status=?',['waiting_discharge']);console.log(JSON.stringify(r));await db.end();})()
                                                         ^^^^^
Invalid assignment target

SyntaxError: Unexpected identifier 'mysql'
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.13.0

[EXIT CODE: 1]
